# fossildb

./: .codespellrc  .gitignore  Changelog.md  Dockerfile  LICENSE.txt  README.md  build.sbt  docker-compose.yaml  fossildb
.circleci/: config.yml
backup-client-python/: Dockerfile  backup-client.py  update_api.sh
client/: .gitignore  Dockerfile  backup-client.py  copy-all-script  copy-some-script  fossildb-client  fossildb-client.py  pyproject.toml  requirements.txt  update_api.sh
client/interactive/: client.py  client.tcss  db_connection.py  modal.tcss  record_explorer.py
project/: build.properties  scalapb.sbt
src/main/protobuf/: fossildbapi.proto  messages.proto  rpcs.proto
src/main/protobuf/fossildb-api/: rpcs.proto
src/main/resources/: logback.xml  reference.conf
src/main/scala/com/scalableminds/fossildb/: FossilDB.scala  FossilDBGrpcImpl.scala  FossilDBServer.scala  StoreGrpcImpl.scala  StoreServer.scala  TimeLogger.scala
src/main/scala/com/scalableminds/fossildb/db/: RocksDBStore.scala  StoreManager.scala  VersionedKeyValueStore.scala
src/main/scala/com/scalableminds/kvservice/: GreeterService.scala  HelloWorldServer.scala  KVServer.scala  StoreImpl.scala  main.scala
src/main/scala/com/scalableminds/kvservice/db/: RocksDBStore.scala  VersionedKeyValueStore.scala
src/main/scala/com/scalableminds/vkvstore/: StoreGrpcImpl.scala  StoreServer.scala  VKVStore.scala
src/test/resources/: logback-test.xml
src/test/scala/com/scalableminds/fossildb/: FossilDBSuite.scala  RocksOptionsSuite.scala  TestHelpers.scala
(+3 files in other folders)
